// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ManageServersRow /> > renders auto-connect icon only if server is autoConnect 1`] = `
<div>
  <table
    class="tw:w-full"
  >
    <thead
      class="tw:hidden tw:lg:table-header-group"
    >
      <tr
        class="tw:group tw:lg:table-row tw:flex tw:flex-col tw:lg:border-0 tw:border-y-2 tw:border-lm-border tw:dark:border-dm-border"
      />
    </thead>
    <tbody
      class="tw:lg:table-row-group tw:flex tw:flex-col tw:gap-y-3"
    >
      <tr
        class="tw:group tw:lg:table-row tw:flex tw:flex-col tw:lg:border-0 tw:border-y-2 tw:border-lm-border tw:dark:border-dm-border tw:hover:bg-lm-primary tw:dark:hover:bg-dm-primary tw:group-[&]/card:hover:bg-lm-secondary tw:dark:group-[&]/card:hover:bg-dm-secondary tw:relative"
      >
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1"
          data-column="Auto-connect"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-check text-primary"
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            id="autoConnectIcon"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </td>
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1 tw:font-bold"
          data-column="Name"
        >
          <a
            data-discover="true"
            href="/server/abc"
          >
            My server
          </a>
        </td>
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1 tw:max-lg:border-b-0"
          data-column="Base URL"
        >
          https://example.com
        </td>
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1 tw:text-right tw:max-lg:absolute tw:right-0 tw:-top-1 tw:mx-lg:pt-0"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ManageServersRow /> > renders auto-connect icon only if server is autoConnect 2`] = `
<div>
  <table
    class="tw:w-full"
  >
    <thead
      class="tw:hidden tw:lg:table-header-group"
    >
      <tr
        class="tw:group tw:lg:table-row tw:flex tw:flex-col tw:lg:border-0 tw:border-y-2 tw:border-lm-border tw:dark:border-dm-border"
      />
    </thead>
    <tbody
      class="tw:lg:table-row-group tw:flex tw:flex-col tw:gap-y-3"
    >
      <tr
        class="tw:group tw:lg:table-row tw:flex tw:flex-col tw:lg:border-0 tw:border-y-2 tw:border-lm-border tw:dark:border-dm-border tw:hover:bg-lm-primary tw:dark:hover:bg-dm-primary tw:group-[&]/card:hover:bg-lm-secondary tw:dark:group-[&]/card:hover:bg-dm-secondary tw:relative"
      >
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1"
          data-column="Auto-connect"
        />
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1 tw:font-bold"
          data-column="Name"
        >
          <a
            data-discover="true"
            href="/server/abc"
          >
            My server
          </a>
        </td>
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1 tw:max-lg:border-b-0"
          data-column="Base URL"
        >
          https://example.com
        </td>
        <td
          class="tw:p-2 tw:border-lm-border tw:dark:border-dm-border tw:block tw:lg:table-cell tw:not-last:border-b-1 tw:lg:border-b-1 tw:before:lg:hidden tw:before:content-[attr(data-column)] tw:before:font-bold tw:before:mr-1 tw:text-right tw:max-lg:absolute tw:right-0 tw:-top-1 tw:mx-lg:pt-0"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
